# QA-From-PDF-

./: 001-qa-from-pdf.py  README.md  pyproject.toml
